--- a/MoscowWeather/Views/Weather/UploadFile.cshtml
+++ b/MoscowWeather/Views/Weather/UploadFile.cshtml
@@ -17,6 +17,6 @@
 </div>
 <script type="text/javascript">
     function ShowProgressBar() {
-        $("#progress-bar").css("display:", "");
+        document.getElementById("progress-bar").style.display = "";
     }
 </script>
