--- a/MoscowWeather/Views/Home/Index.cshtml
+++ b/MoscowWeather/Views/Home/Index.cshtml
@@ -1,1 +1,35 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Moscow weather";
+}
+<style>
+    .box-Action {
+        float: left;
+        width: 50%;
+    }
+    .img-main {
+        height: 300px;
+        display: flex;
+        width: 500px;
+    }
+    a {
+        display: table;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+<div style="margin-top: 30px;">
+    <div class="box-Action">
+        <a href="@Url.Action("List","Weather")">
+            <img class="img-main" src="~/images/ListFile.jpg" /></a>
+        <a href="@Url.Action("List","Weather")">
+            List file(s)
+        </a>
+    </div>
+    <div class="box-Action">
+        <a href="@Url.Action("UploadFile","Weather")"><img class="img-main" src="~/images/uploadFile.jpg" /></a>
+        <a href="@Url.Action("UploadFile","Weather")">
+            Upload file(s)
+        </a>
+    </div>
+</div>
+
